# rule-engine

./: .gitignore  CLAUDE.md  README.md  pipeline-config.example.json
backend/: models.yaml  pyproject.toml
backend/bbox_proc/: __init__.py
backend/bbox_proc/detectors/: __init__.py  base.py  catalog.py  registry.py  rf_detr.py  yolov12.py
backend/bbox_proc/engine/: __init__.py  interpreter.py  scheduler.py
backend/bbox_proc/nodes/: __init__.py  base.py  detection_node.py  filter_node.py  image_analysis_node.py  logic_node.py  merge_node.py  registry.py  relation_node.py
backend/bbox_proc/schema/: __init__.py  models.py  validator.py
backend/bbox_proc/spatial/: __init__.py  annotated.py  geometry.py  iou.py  transform.py
backend/examples/: pipeline.json  run_pipeline.py
backend/rule_execution_engine/: __init__.py
backend/rule_execution_engine/detectors/: __init__.py  base.py  catalog.py  registry.py  rf_detr.py  yolov12.py
backend/rule_execution_engine/engine/: interpreter.py  scheduler.py
backend/rule_execution_engine/nodes/: __init__.py  base.py  detection_node.py  filter_node.py  image_analysis_node.py  input_node.py  logic_node.py  merge_node.py  registry.py  relation_node.py
backend/rule_execution_engine/schema/: models.py  validator.py
backend/rule_execution_engine/spatial/: __init__.py  annotated.py  geometry.py  iou.py  transform.py
backend/tests/: test_detection_node.py  test_filter_node.py  test_image_analysis_node.py  test_input_node.py  test_logic_node.py  test_relation_node.py  test_scheduler.py  test_spatial.py
docs/: spec.md  (+1 more)
(+32 files in other folders)
